💄🔨 Fix black circle + improve readability (#6)
* 🔧 Refactor button focus styles in CSS

- Removed default focus outlines for buttons and icon buttons to enhance visual consistency.
- Added `outline: none !important;` to button and icon button focus states for improved accessibility and design coherence.

* Create BaseTable.tsx for better structure

* 🔧 Refactor state initialization and improve code readability in AdminPage and UserPage

- Updated state initialization for loading flags and dialog states to use explicit boolean types for clarity.
- Consolidated import statements for template tasks in AdminPage.
- Enhanced code readability by removing unnecessary line breaks and simplifying array mapping in both pages.
- Improved user feedback by replacing console errors with snackbar alerts for better error handling.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -87,10 +87,6 @@ button {
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -121,4 +117,14 @@ button:focus-visible {
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+.MuiIconButton-root:focus,
+.MuiIconButton-root:focus-visible {
+  outline: none !important;
+}
+
+button:focus,
+button:focus-visible {
+  outline: none !important;
 }
